--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Delille CELLARS</title>
+		<title>test</title>
 		<link rel="stylesheet" type="text/css" media="screen" href="assets/css/screen.css">
 	</head>
 
